# nvim-aws

./: .gitignore  .gitmodules  Makefile  README.md
codegen/: .gitignore  README.md  conftest.py  pyproject.toml
codegen/src/: extract_all_services.py  extract_all_services_cli.py  extract_services.py  extract_services_cli.py  generate_cli_commands.py
codegen/src/mappings/: commands_with_generate_cli_skeleton.py  commands_with_streaming.py
codegen/src/utility/: common.py  service_name_conversion.py
codegen/tests/: test_extract_all_services.py  test_extract_services_cli.py  test_file_generation.py  test_parse.py  test_special_functions.py
doc/: README_DEPS.md  README_LOCALSTACK_SETUP.md
lua/nvim-aws/: commands.lua  common.lua  init.lua
lua/nvim-aws/autogen_wrappers/: accessanalyzer.lua  account.lua  acm-pca.lua  acm.lua  amp.lua  amplify.lua  amplifybackend.lua  amplifyuibuilder.lua  apigateway.lua  apigatewaymanagementapi.lua  apigatewayv2.lua  appconfig.lua  appconfigdata.lua  appfabric.lua  appflow.lua  appintegrations.lua  application-autoscaling.lua  application-insights.lua  application-signals.lua  applicationcostprofiler.lua  appmesh.lua  appregistry.lua  apprunner.lua  appstream.lua  appsync.lua  apptest.lua  arc-zonal-shift.lua  artifact.lua  athena.lua  auditmanager.lua  autoscaling-plans.lua  autoscaling.lua  b2bi.lua  backup-gateway.lua  backup.lua  backupsearch.lua  batch.lua  bcm-data-exports.lua  bcm-pricing-calculator.lua  (+377 more)
plugin/: nvim-aws.lua
scripts/testing/: cloudwatch_periodic_logging  create_dynamodb_data  sqs_periodic_messages
(+852 files in other folders)
