[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvim-aws-codegen"
version = "0.1.0"
description = "AWS Service Model Parser for nvim-aws"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.3.5", "pytest-mock>=3.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
